fix:in phone keyboard doesnt appaer always

--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="funcs/phoneCheck.js"></script>
     <script src="funcs/changeBgColor.js"></script>
     <script src="funcs/writeExpression.js"></script>
     <script src="funcs/addToMemory.js"></script>
