error color is red,gray change to lightgray, letters uppercased

--- a/index.html
+++ b/index.html
@@ -289,27 +289,27 @@
           type="radio"
           class="btn-check"
           name="btnradio"
-          id="black"
+          id="Black"
           autocomplete="off"
           checked
         />
-        <label class="btn btn-outline-primary" for="black">black</label>
+        <label class="btn btn-outline-primary" for="Black">Black</label>
         <input
           type="radio"
           class="btn-check"
           name="btnradio"
-          id="gray"
+          id="LightGray"
           autocomplete="off"
         />
-        <label class="btn btn-outline-primary" for="gray">gray</label>
+        <label class="btn btn-outline-primary" for="LightGray">Lightgray</label>
         <input
           type="radio"
           class="btn-check"
           name="btnradio"
-          id="white"
+          id="White"
           autocomplete="off"
         />
-        <label class="btn btn-outline-primary" for="white">white</label>
+        <label class="btn btn-outline-primary" for="White">White</label>
       </div>
     </div>
     <script
